umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_tyk2_02_ligands.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 13
  summaries:
    - sum_formula: C15H14Cl2N4O2
      atom_count: 37
      bond_count: 38
      property_count: 43
    - sum_formula: C16H12Cl2FN3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C16H12Cl3N3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C16H13Cl2N3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C14H11Cl2N3O2
      atom_count: 32
      bond_count: 33
      property_count: 43
    - sum_formula: C15H13Cl2N3O2
      atom_count: 35
      bond_count: 36
      property_count: 43
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      property_count: 44
    - sum_formula: C16H15Cl2N3O2
      atom_count: 38
      bond_count: 39
      property_count: 43
    - sum_formula: C18H17Cl2N3O2
      atom_count: 42
      bond_count: 44
      property_count: 43
molecule_lenient:
  success: true
  compound_count: 13
  summaries:
    - sum_formula: C15H14Cl2N4O2
      atom_count: 37
      bond_count: 38
      property_count: 43
    - sum_formula: C16H12Cl2FN3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C16H12Cl3N3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C16H13Cl2N3O2
      atom_count: 36
      bond_count: 38
      property_count: 43
    - sum_formula: C14H11Cl2N3O2
      atom_count: 32
      bond_count: 33
      property_count: 43
    - sum_formula: C15H13Cl2N3O2
      atom_count: 35
      bond_count: 36
      property_count: 43
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      property_count: 43
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      property_count: 44
    - sum_formula: C16H15Cl2N3O2
      atom_count: 38
      bond_count: 39
      property_count: 43
    - sum_formula: C18H17Cl2N3O2
      atom_count: 42
      bond_count: 44
      property_count: 43
extended_molecule:
  success: true
  compound_count: 13
  extended_summaries:
    - sum_formula: C15H14Cl2N4O2
      atom_count: 37
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H12Cl2FN3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H12Cl3N3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H13Cl2N3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O2
      atom_count: 32
      bond_count: 33
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C15H13Cl2N3O2
      atom_count: 35
      bond_count: 36
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      extended_atoms: 0
      extended_bonds: 0
      property_count: 44
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H15Cl2N3O2
      atom_count: 38
      bond_count: 39
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C18H17Cl2N3O2
      atom_count: 42
      bond_count: 44
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 13
  extended_summaries:
    - sum_formula: C15H14Cl2N4O2
      atom_count: 37
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H12Cl2FN3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H12Cl3N3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H13Cl2N3O2
      atom_count: 36
      bond_count: 38
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O2
      atom_count: 32
      bond_count: 33
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C15H13Cl2N3O2
      atom_count: 35
      bond_count: 36
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C17H15Cl2N3O2
      atom_count: 39
      bond_count: 41
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C14H11Cl2N3O3
      atom_count: 33
      bond_count: 34
      extended_atoms: 0
      extended_bonds: 0
      property_count: 44
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C16H15Cl2N3O2
      atom_count: 38
      bond_count: 39
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
    - sum_formula: C18H17Cl2N3O2
      atom_count: 42
      bond_count: 44
      extended_atoms: 0
      extended_bonds: 0
      property_count: 43
      rgroup_count: 0
      sgroup_count: 0
