umol-models-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@scifinder_10534-89-1.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: ClCoN6+2
      atom_count: 8
      bond_count: 6
      property_count: 7
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: ClCoN6+2
      atom_count: 8
      bond_count: 6
      property_count: 7
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: ClCoN6+2
      atom_count: 8
      bond_count: 6
      extended_atoms: 0
      extended_bonds: 0
      property_count: 7
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: ClCoN6+2
      atom_count: 8
      bond_count: 6
      extended_atoms: 0
      extended_bonds: 0
      property_count: 7
      rgroup_count: 0
      sgroup_count: 0
